--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ function displayTable(allocation, costMatrix, stepTitle) {
     </nav>
 
     <div id="graphic-method" class="content-section" style="display: none;">
-        <h2 class="mt-4">Графический метод</h2>
+        <h2 class="mt-4" style="color: black;">Графический метод</h2>
 
         <div class="form-group">
             <label for="constraints-count">Количество ограничений:</label>
@@ -689,11 +689,11 @@ function displayTable(allocation, costMatrix, stepTitle) {
 
         <h3 class="mt-4">Результат:</h3>
         <canvas id="graphCanvas" class="mt-3" width="400" height="400"></canvas>
-        <p id="solution-output"></p>
+        <p id="solution-output" class="solution-output"></p>
     </div>
 
     <div id="simplex-method" class="content-section" style="display: none;">
-        <h2 class="mb-4">Симплекс-метод</h2>
+        <h2 class="mb-4" style="color: black;">Симплекс-метод</h2>
 
         <div class="form-group">
             <label for="variables-count">Количество переменных:</label>
@@ -742,7 +742,7 @@ function displayTable(allocation, costMatrix, stepTitle) {
     </div>
 
     <div id="transport-problem" class="content-section" style="display: none;">
-    <h2 class="mb-4">Транспортная задача</h2>
+    <h2 class="mb-4" style="color: black;">Транспортная задача</h2>
 
     <div class="form-group">
         <label for="supply-count">Количество поставщиков:</label>
@@ -756,7 +756,7 @@ function displayTable(allocation, costMatrix, stepTitle) {
 
     <button class="btn btn-primary mt-2" onclick="updateTransportTables()">Обновить таблицу</button>
 
-    <h3 class="mt-4">Транспортная таблица:</h3>
+    <h3 class="mt-4" >Транспортная таблица:</h3>
     <table class="table" id="transport-table"></table>
 
     <button class="btn btn-success mt-3" onclick="solveTransportProblem()">Решить</button>
@@ -795,8 +795,29 @@ function displayTable(allocation, costMatrix, stepTitle) {
         margin-top: 5px;
     }
 
-    .btn {
+    .solution-output {
         font-size: 16px;
+        color: #333;
+        background-color: #eef;
+        padding: 10px;
+        border-radius: 5px;
+        margin-top: 10px;
+    }
+
+    .btn {
+        width: 100%;
+        height: 4em;
+        background-color: #000;
+        color: #fff;
+        font-size: 1.5em;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+    }
+
+    .btn:hover {
+        background-color: #c0c0c0;
+        color: #000000;
     }
 
     .table {
