--- a/index.html
+++ b/index.html
@@ -664,12 +664,18 @@ function displayTable(allocation, costMatrix, stepTitle) {
         });
     });
 
+
     </script>
 </head>
 <body class="container mt-4">
     <h1 class="text-center">Решение задач линейного программирования</h1>
+
     <button id="theme-toggle">🌙</button>
+
     <label id="version">ver. 0.9</label>
+
+    <!--<button onclick="document.location='https://forms.yandex.ru/u/67ebf40184227cf32733264f/'" id="pred">Предложения по улучшению сайта</button> -->
+
     <nav class="nav nav-pills justify-content-center my-3">
         <button class="btm" onclick="showSection('graphic-method')">Графический метод</button>
         <button class="btm" onclick="showSection('simplex-method')">Симплекс-метод</button>
@@ -842,7 +848,7 @@ function displayTable(allocation, costMatrix, stepTitle) {
     }
 
     .btm {
-        width: 32%;
+        width: 35%;
         height: 3em;
         background-color: #000;
         color: #fff;
@@ -901,6 +907,11 @@ function displayTable(allocation, costMatrix, stepTitle) {
 
     body {
         transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    body.languages {
+        background-color: #ffffff;
+        color: #000000;
     }
 
     body.dark-mode {
@@ -973,7 +984,7 @@ function displayTable(allocation, costMatrix, stepTitle) {
     }
 
     #theme-toggle {
-        position: fixed;
+        position: absolute;
         left: 20px;
         top: 20px;
         cursor: pointer;
@@ -982,15 +993,31 @@ function displayTable(allocation, costMatrix, stepTitle) {
         border: none;
         color: inherit;
     }
-    
+
     #version {
-        position: fixed;
+        position: absolute;
         left: 20px;
         bottom: 20px;
         font-size: 13px;
         background: none;
         border: none;
         color: inherit;
+    }
+
+    #pred {
+        position: fixed;
+        right: 20px;
+        top: 20px;
+        width: 18%;
+        height: 4em;
+        background-color: #000;
+        color: #fff;
+        font-size: 0.8em;
+        font-weight: bold;
+        border: 2px solid white;
+        border-radius: 8px;
+        cursor: pointer;
+    }
     }
 </style>
 
