--- a/index.html
+++ b/index.html
@@ -819,7 +819,9 @@ function displayTable(allocation, costMatrix, stepTitle) {
 
     .form-control {
         width: 100%;
-        padding: 10px;
+        min-width: 20px;
+        padding: 5px;
+        font-size: 11px;
         margin-top: 5px;
     }
 
