--- a/index.html
+++ b/index.html
@@ -740,7 +740,9 @@ function displayTable(allocation, costMatrix, stepTitle) {
         <label>Min <input type="checkbox" id="opt-goal"> Max</label>
 
         <h3 class="mt-4">Коэффициенты ограничений:</h3>
-        <table class="table" id="constraints-table"></table>
+        <div class="table-wrapper">
+            <table class="table" id="constraints-table"></table>
+        </div>
 
         <button class="btn btn-success mt-3" onclick="solveGraphicalMethod()">Решить</button>
 
@@ -766,22 +768,24 @@ function displayTable(allocation, costMatrix, stepTitle) {
         <button class="btn btn-primary mt-2" onclick="updateSimplexTables()">Обновить таблицы</button>
 
         <h3 class="mt-4">Целевая функция:</h3>
-        <table class="table" id="simplex-objective-function">
-            <thead>
-                <tr>
-                    <th scope="col">x1</th>
-                    <th scope="col">x2</th>
-                    <th scope="col">...</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><input type="number" class="form-control" placeholder="x1" value="1"></td>
-                    <td><input type="number" class="form-control" placeholder="x2" value="1"></td>
-                    <td><input type="number" class="form-control" placeholder="x3" value="0"></td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table-wrapper">
+            <table class="table" id="simplex-objective-function">
+                <thead>
+                    <tr>
+                        <th scope="col">x1</th>
+                        <th scope="col">x2</th>
+                        <th scope="col">...</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><input type="number" class="form-control" placeholder="x1" value="1"></td>
+                        <td><input type="number" class="form-control" placeholder="x2" value="1"></td>
+                        <td><input type="number" class="form-control" placeholder="x3" value="0"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
         <label for="simplex-opt-goal">Максимизировать</label>
         <input type="checkbox" id="simplex-opt-goal">
@@ -789,14 +793,19 @@ function displayTable(allocation, costMatrix, stepTitle) {
         <label for="dual-problem">Двойственная задача</label>
         <input type="checkbox" id="dual-problem">
 
-
-        <h3 class="mt-4">Коэффициенты ограничений:</h3>
-        <table class="table" id="simplex-constraints-table"></table>
+        <div class="table-wrapper">
+            <h3 class="mt-4">Коэффициенты ограничений:</h3>
+            <table class="table" id="simplex-constraints-table"></table>
+        </div>
 
         <button class="btn btn-success mt-3" onclick="solveSimplexMethod()">Решить</button>
 
+
         <h3 class="mt-4">Результат:</h3>
-        <div id="solution-output-simplex" class="mt-3"></div>
+
+        <div class="table-wrapper">
+            <div id="solution-output-simplex" class="mt-3"></div>
+        </div>
     </div>
 
     <div id="transport-problem" class="content-section" style="display: none;">
@@ -814,13 +823,19 @@ function displayTable(allocation, costMatrix, stepTitle) {
 
     <button class="btn btn-primary mt-2" onclick="updateTransportTables()">Обновить таблицу</button>
 
-    <h3 class="mt-4" >Транспортная таблица:</h3>
-    <table class="table" id="transport-table"></table>
+    <div class="table-wrapper">
+        <h3 class="mt-4" >Транспортная таблица:</h3>
+        <table class="table" id="transport-table"></table>
+    </div>
 
     <button class="btn btn-success mt-3" onclick="solveTransportProblem()">Решить</button>
 
     <h3 class="mt-4">Результат:</h3>
-    <p id="transport-solution-output"></p>
+
+    <div class="table-wrapper">
+        <p id="transport-solution-output"></p>
+    </div>
+
     </div>
 
 <!-- Стиль -->
@@ -915,9 +930,15 @@ function displayTable(allocation, costMatrix, stepTitle) {
         color: #000000;
     }
 
+    .table-wrapper {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+
     .table {
         width: 100%;
         margin-top: 10px;
+        min-width: 100px;
         border: 1px solid #ddd;
         border-radius: 5px;
         background-colour: #ffffff;
